--- a/css/main/items/key-Items.css
+++ b/css/main/items/key-Items.css
@@ -1,14 +1,14 @@
-.main-itemInfoPokeball {
+.main-itemInfoKey {
   margin: 1rem;
   border: 5px solid black;
-  background: #0096c7;
+  background: #F08030;
   text-align: center;
   border-radius: 25px;
   height: 250px;
 }
 
-.main-imageItemPokeball {
-  width: 50px;
-  height: 50px;
+.main-imageItemKey {
+  width: 100px;
+  height: 70px;
   margin: .25rem 0;
 }
