--- a/css/main/items/miscellanious-Items.css
+++ b/css/main/items/miscellanious-Items.css
@@ -1,14 +1,14 @@
-.main-itemInfoPokeball {
+.main-itemInfoMiscellanious {
   margin: 1rem;
   border: 5px solid black;
-  background: #0096c7;
+  background: #F08030;
   text-align: center;
   border-radius: 25px;
   height: 250px;
 }
 
-.main-imageItemPokeball {
-  width: 50px;
-  height: 50px;
+.main-imageItemMiscellanious {
+  width: 45px;
+  height: 55px;
   margin: .25rem 0;
 }
