--- a/css/main/items/restoring-Items.css
+++ b/css/main/items/restoring-Items.css
@@ -1,14 +1,14 @@
-.main-itemInfoPokeball {
+.main-itemInfoRestoring {
   margin: 1rem;
   border: 5px solid black;
-  background: #0096c7;
+  background: #F85888;
   text-align: center;
   border-radius: 25px;
   height: 250px;
 }
 
-.main-imageItemPokeball {
+.main-imageItemRestoring {
   width: 50px;
-  height: 50px;
+  height: 55px;
   margin: .25rem 0;
 }
