--- a/css/main/myTeam/mediaQuery-MyTeam.css
+++ b/css/main/myTeam/mediaQuery-MyTeam.css
@@ -12,8 +12,8 @@
   }
 
   .main-pokemonStatus {
-    width: 50%;
-    margin: 0;
+    width: 100%;
+    margin: .5rem auto;
     border: 0;
     box-shadow:inset 0px 0px 0px 1px #000;
   }
@@ -28,7 +28,7 @@
   }
 
   .main-pokemonStatus {
-    width: 33.33%;
+    width: 50%;
   }
 }
 
@@ -50,11 +50,12 @@
 
   .main-showPokemons {
     width: 90%;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .main-pokemonStatus {
-    width: 20%;
+    width: 30%;
     border: 2px solid black;
     margin-left: 0.1rem;
     box-shadow:inset 0px 0px 0px 0px #000;
